--- a/app/index/view/index/tr004.html
+++ b/app/index/view/index/tr004.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>t006 html</title>
+	<title>t004 html</title>
 </head>
 <body>
-	t006 html  
+	t004 html   name is {$name} ,age is {$age}
 </body>
 </html>
