--- a/app/admin/view/index/welcome.html
+++ b/app/admin/view/index/welcome.html
@@ -61,20 +61,7 @@
                                             <cite>67</cite></p>
                                     </a>
                                 </li>
-                                <li class="layui-col-md2 layui-col-xs6">
-                                    <a href="javascript:;" class="x-admin-backlog-body">
-                                        <h3>文章数</h3>
-                                        <p>
-                                            <cite>67</cite></p>
-                                    </a>
-                                </li>
-                                <li class="layui-col-md2 layui-col-xs6 ">
-                                    <a href="javascript:;" class="x-admin-backlog-body">
-                                        <h3>文章数</h3>
-                                        <p>
-                                            <cite>6766</cite></p>
-                                    </a>
-                                </li>
+                               
                             </ul>
                         </div>
                     </div>
@@ -87,38 +74,43 @@
                             <table class="layui-table">
                                 <tbody>
                                     <tr>
-                                        <th>xxx版本</th>
-                                        <td>1.0.180420</td></tr>
+                                        <th>管理后台版本</th>
+                                        <td>1.0.18</td></tr>
                                     <tr>
                                         <th>服务器地址</th>
-                                        <td>x.xuebingsi.com</td></tr>
+                                        <td>{$_SERVER['SERVER_ADDR']}</td></tr>
                                     <tr>
                                         <th>操作系统</th>
-                                        <td>WINNT</td></tr>
+                                        <td>{:php_uname()}</td></tr>
                                     <tr>
                                         <th>运行环境</th>
-                                        <td>Apache/2.4.23 (Win32) OpenSSL/1.0.2j mod_fcgid/2.3.9</td></tr>
+                                        <td>{$_SERVER['SERVER_SOFTWARE']}</td></tr>
                                     <tr>
                                         <th>PHP版本</th>
-                                        <td>5.6.27</td></tr>
+                                        <td>{:PHP_VERSION}</td></tr>
                                     <tr>
                                         <th>PHP运行方式</th>
-                                        <td>cgi-fcgi</td></tr>
+                                        <td>{:php_sapi_name()}</td></tr>
                                     <tr>
                                         <th>MYSQL版本</th>
-                                        <td>5.5.53</td></tr>
+                                        <td>5.7.26</td></tr>
                                     <tr>
                                         <th>ThinkPHP</th>
-                                        <td>5.0.18</td></tr>
+                                        <td>{$think_version} </td></tr>
                                     <tr>
                                         <th>上传附件限制</th>
-                                        <td>2M</td></tr>
+                                        <td>{:get_cfg_var('upload_max_filesize')}</td></tr>
                                     <tr>
                                         <th>执行时间限制</th>
-                                        <td>30s</td></tr>
+                                        <td>{:get_cfg_var('max_execution_time')}s</td></tr>
+
+                                    <tr>
+                                        <th>内存消耗</th>
+                                        <td>{:round(memory_get_usage()/1024/1024,2)}M</td></tr>
+                                    
                                     <tr>
                                         <th>剩余空间</th>
-                                        <td>86015.2M</td></tr>
+                                        <td>{:round(disk_free_space('.')/1024/1024/1024,2)}G</td></tr>
                                 </tbody>
                             </table>
                         </div>
@@ -131,13 +123,15 @@
                             <table class="layui-table">
                                 <tbody>
                                     <tr>
-                                        <th>版权所有</th>
-                                        <td>xuebingsi(xuebingsi)
-                                            <a href="http://x.xuebingsi.com/" target="_blank">访问官网</a></td>
-                                    </tr>
-                                    <tr>
                                         <th>开发者</th>
-                                        <td>马志斌(113664000@qq.com)</td></tr>
+                                        <td>yangphp(466146588@qq.com)  版权所有 </td></tr>
+                                        <tr>
+                                        <th>博客地址</th>
+                                        <td>https://www.cnblogs.com/ypeih/ <a href="https://www.cnblogs.com/ypeih/" target="_blank">访问博客</a> </td></tr>
+                                        <tr>
+                                        <th>GitHub</th>
+                                        <td>https://github.com/yangphp <a href="https://github.com/yangphp" target="_blank">访问GitHub</a> </td></tr>
+
                                 </tbody>
                             </table>
                         </div>
