完成系统管理

--- a/app/admin/view/index/index.html
+++ b/app/admin/view/index/index.html
@@ -233,6 +233,41 @@
                     </li>
                     <li>
                         <a href="javascript:;">
+                            <i class="iconfont left-nav-li" lay-tips="系统管理">&#xe6ae;</i>
+                            <cite>系统管理</cite>
+                            <i class="iconfont nav_right">&#xe697;</i></a>
+                        <ul class="sub-menu">
+                            <li>
+                                <a onclick="xadmin.add_tab('系统设置','/admin/setting/systemSetting')">
+                                    <i class="iconfont">&#xe6a7;</i>
+                                    <cite>系统设置</cite></a>
+                            </li>
+                            <li>
+                                <a onclick="xadmin.add_tab('公告管理','/admin/setting/systemNoticeList')">
+                                    <i class="iconfont">&#xe6a7;</i>
+                                    <cite>公告管理</cite></a>
+                            </li>
+                            <li>
+                                <a onclick="xadmin.add_tab('广告管理','/admin/setting/adsList')">
+                                    <i class="iconfont">&#xe6a7;</i>
+                                    <cite>广告管理</cite></a>
+                            </li>
+                            <li>
+                                <a onclick="xadmin.add_tab('广告位管理','/admin/setting/adsPosList')">
+                                    <i class="iconfont">&#xe6a7;</i>
+                                    <cite>广告位管理</cite></a>
+                            </li>
+                            <li>
+                                <a onclick="xadmin.add_tab('城市管理','/admin/setting/regionList')">
+                                    <i class="iconfont">&#xe6a7;</i>
+                                    <cite>城市管理</cite></a>
+                            </li>
+
+                        </ul>
+                    </li>
+
+                    <li>
+                        <a href="javascript:;">
                             <i class="iconfont left-nav-li" lay-tips="系统统计">&#xe6ce;</i>
                             <cite>系统统计</cite>
                             <i class="iconfont nav_right">&#xe697;</i></a>
