--- a/app/admin/view/system/ads_add.html
+++ b/app/admin/view/system/ads_add.html
@@ -3,7 +3,7 @@
     
     <head>
         <meta charset="UTF-8">
-        <title>添加文章</title>
+        <title>添加广告</title>
         <meta name="renderer" content="webkit">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
@@ -23,22 +23,22 @@
                 <form class="layui-form">
                   <div class="layui-form-item">
                       <label for="cate_name" class="layui-form-label">
-                          <span class="x-red">*</span>文章标题
+                          <span class="x-red">*</span>广告名称
                       </label>
                       <div class="layui-input-block">
-                          <input type="text" id="news_title" name="news_title" required="" lay-verify="required" 
-                          autocomplete="off" class="layui-input" style="width:700px;">
+                          <input type="text" id="ads_title" name="ads_title" required="" lay-verify="required" 
+                          autocomplete="off" class="layui-input" style="width:500px;">
                       </div>
                   </div>
                   <div class="layui-form-item">
                       <label for="cate_name" class="layui-form-label">
-                          <span class="x-red">*</span>文章分类
+                          <span class="x-red">*</span>广告位
                       </label>
                       <div class="layui-input-inline">
-                          <select name="cate_id" >
+                          <select name="ads_pos" >
                               <option value="">选择分类</option>
-                              {foreach $cate_list as $val}
-                              <option value="{$val.id}" >{$val.cate_name}</option>
+                              {foreach $pos_list as $val}
+                              <option value="{$val.id}" >{$val.pos_name}</option>
                               {/foreach}
                            </select>
                       </div>
@@ -46,62 +46,57 @@
                   
                   <div class="layui-form-item">
                       <label class="layui-form-label">
-                        文章封面
+                        广告图
                     </label>
                     <button type="button" class="layui-btn" id="news_img_button" >上传图片</button>
-                    <input type="hidden" value="" id="news_pic" name="news_pic" required="" lay-verify="news_img" autocomplete="off" class="layui-input">
+                    <input type="hidden" value="" id="news_pic" name="ads_pic" required="" lay-verify="news_img" autocomplete="off" class="layui-input">
                     <div class="layui-upload-list">
                         <label class="layui-form-label">
                         </label>
-                        <img class="layui-upload-img" id="newsimg" style="width: 200px;height: 140px;margin: 0 10px 10px 0;" src="" onerror="this.src='/admin/images/no_img.png'">
+                        <img class="layui-upload-img" id="newsimg" style="height: 140px;margin: 0 10px 10px 0;" src="" onerror="this.src='/admin/images/no_img.png'">
                         <p id="newsimg_text"></p>
                     </div>
                   </div>
 
-                  <div class="layui-form-item">
-                      <label for="admin_truename" class="layui-form-label">
-                          <span class="x-red">*</span>文章简介
-                      </label>
-                       <div class="layui-input-block">
-                        <textarea placeholder="请输入内容" id="news_desc" name="news_desc" class="layui-textarea" style="width:700px;height:100px;"></textarea>
-                    </div>
-                  </div>
+                
 
+                  <div class="layui-form-item">
+                      <label for="ads_jump_type" class="layui-form-label">
+                         跳转类型
+                      </label>
+                     <div class="layui-input-block">
+                        <input type="radio" name="ads_jump_type" value="1" lay-skin="primary" checked="" title="H5" >
+                        <input type="radio" name="ads_jump_type" value="2"  lay-skin="primary" title="功能区">
+                      </div>
+                  </div>
                    <div class="layui-form-item">
-                      <label for="admin_truename" class="layui-form-label">
-                          <span class="x-red">*</span>文章内容
+                      <label for="cate_name" class="layui-form-label">
+                          跳转内容
                       </label>
-                       <div class="layui-input-block">
-                        <textarea placeholder="请输入内容" id="news_content" name="news_content" class="layui-textarea" style="width:700px;height:400px;"></textarea>
-                        </div>
+                      <div class="layui-input-block">
+                          <input type="text" id="ads_jump_content" name="ads_jump_content" required="" lay-verify="required" 
+                          autocomplete="off" class="layui-input" style="width:500px;">
+                      </div>
+                    </div>
+
+
+                  <div class="layui-form-item">
+                      <label for="cate_name" class="layui-form-label">
+                          排序
+                      </label>
+                      <div class="layui-input-inline">
+                          <input type="text" id="ads_orders" name="ads_orders" required="" lay-verify="required"  value="0" 
+                          autocomplete="off" class="layui-input">
+                      </div>
                   </div>
 
                   <div class="layui-form-item">
-                      <label for="admin_dept" class="layui-form-label">
+                      <label for="is_show" class="layui-form-label">
                          显示隐藏
                       </label>
                      <div class="layui-input-block">
                         <input type="radio" name="is_show" value="1" lay-skin="primary" checked="" title="显示" >
                         <input type="radio" name="is_show" value="2"  lay-skin="primary" title="隐藏">
-                      </div>
-                  </div>
-
-                  <div class="layui-form-item">
-                      <label for="admin_dept" class="layui-form-label">
-                         是否推荐
-                      </label>
-                     <div class="layui-input-block">
-                        <input type="radio" name="is_recommed" value="1" lay-skin="primary" checked="" title="否" >
-                        <input type="radio" name="is_recommed" value="2"  lay-skin="primary" title="推荐">
-                      </div>
-                  </div>
-                  <div class="layui-form-item">
-                      <label for="cate_name" class="layui-form-label">
-                          阅读数量
-                      </label>
-                      <div class="layui-input-inline">
-                          <input type="text" id="news_reads" name="news_reads" required="" lay-verify="required"  value="0" 
-                          autocomplete="off" class="layui-input">
                       </div>
                   </div>
 
@@ -115,22 +110,8 @@
               </form>
             </div>
         </div>
-        <script charset="utf-8" src="/admin//kindeditor/kindeditor-all-min.js"></script>
-        <script charset="utf-8" src="/admin/kindeditor/lang/zh-CN.js"></script>
-
-        <script>
-
-            var editor;
-            KindEditor.ready(function(K) {
-                editor =  K.create('#news_content', {
-                     uploadJson : '/admin/kindeditor/php/upload_json.php',
-                     fileManagerJson : '/admin/kindeditor/php/file_manager_json.php',
-                    allowFileManager : true
-                });
-            });
-
-
-            layui.use(['form', 'layer'],
+      
+        <script>layui.use(['form', 'layer'],
             function() {
                 $ = layui.jquery;
                 var form = layui.form,
@@ -145,11 +126,8 @@
                 form.on('submit(add)',
                 function(data) {
                     
-                    // 同步数据后可以直接取得textarea的value
-                    editor.sync();
-                    data.field.news_content = $('#news_content').val();
 
-                    var sub_url = "/admin/news/newsAddAct";
+                    var sub_url = "/admin/setting/adsAddAct";
                     $.post(sub_url,data.field,function(redata){
                         if(redata.status == 'SUCCESS')
                         {
@@ -158,11 +136,10 @@
                             },
                             function() {
                                 //关闭当前frame
-                                //xadmin.close();
+                                xadmin.close();
                                 // 可以对父窗口进行刷新 
-                                //xadmin.father_reload();
+                                xadmin.father_reload();
                                 
-                                window.location.href = "/admin/news/newsList";
                             });
                         }
                         else
