--- a/app/admin/view/admin/powders_list.html
+++ b/app/admin/view/admin/powders_list.html
@@ -73,7 +73,7 @@
                                 <tr cate-id="{$val['id']}" fid="{$val['parent_id']}" >
                                   
                                   <td>{$val['id']}</td>
-                                  <td>admin</td>
+                                  <td> <i class="iconfont">{:base64_decode($val['picon'])}</i>  | admin</td>
                                   <td>
                                       <i class="layui-icon x-show" status='false'>&#xe625;</i>
                                       {$val['pname']}
