--- a/app/admin/view/user/user_login_list.html
+++ b/app/admin/view/user/user_login_list.html
@@ -2,7 +2,7 @@
 <html class="x-admin-sm">
     <head>
         <meta charset="UTF-8">
-        <title>管理员列表</title>
+        <title>登录列表</title>
         <meta name="renderer" content="webkit">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
@@ -19,9 +19,9 @@
         <div class="x-nav">
           <span class="layui-breadcrumb">
             <a href="">首页</a>
-            <a href="">管理员管理</a>
+            <a href="">用户管理</a>
             <a>
-              <cite>管理员列表</cite></a>
+              <cite>用户登录记录</cite></a>
           </span>
           <a class="layui-btn layui-btn-small" style="line-height:1.6em;margin-top:3px;float:right" onclick="location.reload()" title="刷新">
             <i class="layui-icon layui-icon-refresh" style="line-height:30px"></i></a>
@@ -31,23 +31,27 @@
                 <div class="layui-col-md12">
                     <div class="layui-card">
                         <div class="layui-card-body ">
-                            <form class="layui-form layui-col-space5" method="post" action="/admin/admin/adminList">
-                                
+                            <form class="layui-form layui-col-space5" method="post" action="/admin/user/userLoginList">
+                                 <div class="layui-inline layui-show-xs-block">
+                                    <input class="layui-input"  autocomplete="off" placeholder="开始日" name="start" value="{$start}" id="start">
+                                </div>
                                 <div class="layui-inline layui-show-xs-block">
-                                    <input type="text" name="s_admin_name" value="{$s_admin_name}"  placeholder="账号" autocomplete="off" class="layui-input">
+                                    <input class="layui-input"  autocomplete="off" placeholder="截止日" name="end" value="{$end}" id="end">
+                                </div>
+
+                                <div class="layui-inline layui-show-xs-block">
+                                    <input type="text" name="user_name" value="{$user_name}"  placeholder="账号" autocomplete="off" class="layui-input">
                                 </div>
                                  <div class="layui-inline layui-show-xs-block">
-                                    <input type="text" name="s_admin_truename"  value="{$s_admin_truename}" placeholder="姓名" autocomplete="off" class="layui-input">
+                                    <input type="text" name="ip_address"  value="{$ip_address}" placeholder="IP地址" autocomplete="off" class="layui-input">
                                 </div>
+                              
                                 <div class="layui-inline layui-show-xs-block">
-                                    <input type="text" name="s_admin_mobile" value="{$s_admin_mobile}"  placeholder="手机号" autocomplete="off" class="layui-input">
-                                </div>
-                                <div class="layui-inline layui-show-xs-block">
-                                   <select name="s_admin_status" >
-                                      <option value="">账户状态</option>
-                                      <option value="1" {if $s_admin_status == 1}selected{/if}>账户正常</option>
-                                      <option value="2" {if $s_admin_status == 2}selected{/if}>限制登录</option>
-                                      <option value="3" {if $s_admin_status == 3}selected{/if}>永久封禁</option>
+                                   <select name="login_status" >
+                                      <option value="">登录状态</option>
+                                      <option value="1" {if $login_status == 1}selected{/if}>登录成功</option>
+                                      <option value="2" {if $login_status == 2}selected{/if}>登录失败</option>
+                                      <option value="3" {if $login_status == 3}selected{/if}>安全退出</option>
                                    </select>
                                 </div>
                                 <div class="layui-inline layui-show-xs-block">
@@ -56,48 +60,39 @@
                             </form>
                         </div>
 
-                         <div class="layui-card-header">
-                            <button class="layui-btn" onclick="xadmin.open('添加管理员','/admin/admin/adminAdd',700,500)"><i class="layui-icon"></i>添加管理员</button>
-                        </div>
                         <div class="layui-card-body ">
                             <table class="layui-table layui-form">
                               <thead>
                                 <tr>
-                                 
                                   <th>ID</th>
-                                  <th>账号</th>
-                                  <th>姓名</th>
-                                  <th>手机号</th>
-                                  <th>角色</th>
-                                  <th>账户状态</th>
-                                  <th>加入时间</th>
+                                  <th>UID/账号</th>
+                                  <th>登录类型</th>
+                                  <th>IP地址</th>
+                                  
+                                  <th width="15%">加入时间</th>
                                   <th>操作</th>
                               </thead>
                               <tbody>
-                                {foreach $admin_list as $val}
+                                {foreach $data_list as $val}
                                 <tr>
-                                  <td>{$val.admin_id}</td>
-                                  <td>{$val.admin_name}</td>
-                                  <td>{$val.admin_truename}</td>
-                                  <td>{$val.admin_mobile}</td>
-                                  <td>{$val.admin_role_name}</td>
-
+                                  <td>{$val.id}</td>
+                                  <td>{$val.user_id}/{$val.user_name}</td>
                                   <td class="td-status">
-                                    {if $val.admin_status == 1}
-                                    <span class="layui-btn layui-btn-normal layui-btn-mini">账户正常</span>
-                                    {elseif $val.admin_status == 2 /}
-                                    <span class="layui-btn layui-btn-warning layui-btn-mini">限制登录</span>
-                                    {else /}
-                                    <span class="layui-btn layui-btn-danger layui-btn-mini">永久封禁</span>
+                                    {if $val.login_status == 1}
+                                    <span class="layui-btn layui-btn-normal layui-btn-mini">登录成功</span>
+                                    {elseif $val.login_status == 2 /}
+                                    <span class="layui-btn layui-btn-warning layui-btn-mini">登录失败</span>
+                                    {elseif $val.login_status == 3 /}
+                                    <span class="layui-btn layui-btn-primary layui-btn-mini">安全退出</span>
                                     {/if}
                                   </td>
+                                  <td>{$val.ip_address}</td>
+                                  
+                                 
                                   <td>{$val.add_datetime}</td>
                                   <td class="td-manage">
                                    
-                                    <a title="编辑"  onclick="xadmin.open('编辑','/admin/admin/adminAdd?s_admin_id={$val.admin_id}')" href="javascript:;">
-                                      <i class="layui-icon">&#xe642;</i>
-                                    </a>
-                                    <a title="删除" onclick="item_del(this,'{$val.admin_id}')" href="javascript:;">
+                                    <a title="删除" onclick="item_del(this,'{$val.id}')" href="javascript:;">
                                       <i class="layui-icon">&#xe640;</i>
                                     </a>
                                   </td>
@@ -121,6 +116,16 @@
       layui.use(['laydate','form'], function(){
         var laydate = layui.laydate;
         var form = layui.form;
+
+        //执行一个laydate实例
+        laydate.render({
+          elem: '#start' //指定元素
+        });
+
+        //执行一个laydate实例
+        laydate.render({
+          elem: '#end' //指定元素
+        });
         
       });
 
@@ -130,11 +135,11 @@
       function item_del(obj,id){
           layer.confirm('确认要删除吗？',function(index){
               
-                var sub_url = "/admin/admin/adminDel";
-                $.post(sub_url,{s_admin_id:id},function(redata){
+                var sub_url = "/admin/user/userLoginDel";
+                $.post(sub_url,{id:id},function(redata){
                     if(redata.status == 'SUCCESS')
                     {
-                       layer.alert("删除数据成功!", {
+                       layer.alert("删除成功!", {
                             icon: 6
                         },
                         function() {
