--- a/app/admin/view/user/user_msg_add.html
+++ b/app/admin/view/user/user_msg_add.html
@@ -3,7 +3,7 @@
     
     <head>
         <meta charset="UTF-8">
-        <title>添加菜单</title>
+        <title>添加消息</title>
         <meta name="renderer" content="webkit">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
@@ -22,88 +22,79 @@
             <div class="layui-row">
                 <form class="layui-form">
                   <div class="layui-form-item">
-                      <label for="pname" class="layui-form-label">
-                          <span class="x-red">*</span>菜单名称
+                      <label  class="layui-form-label">
+                          <span class="x-red">*</span>账号
                       </label>
                       <div class="layui-input-inline">
-                          <input type="text" id="pname" name="pname" required="" lay-verify="required" 
+                          <input type="text" id="user_name" name="user_name" required="" lay-verify="required" 
+                          autocomplete="off" class="layui-input">
+                      </div>
+                      <div class="layui-form-mid layui-word-aux">
+                          <span class="x-red">*</span>请输入正确的用户账号
+                      </div>
+                  </div>
+                   <div class="layui-form-item">
+                      <label class="layui-form-label">
+                         <span class="x-red">*</span>消息类型
+                      </label>
+                     <div class="layui-input-block">
+                        <input type="radio" name="msg_type" value="1" lay-skin="primary" checked="" title="用户消息" >
+                        <input type="radio" name="msg_type" value="2"  lay-skin="primary" title="系统提示">
+                      </div>
+                  </div>
+                  <div class="layui-form-item">
+                      <label class="layui-form-label">
+                          <span class="x-red">*</span>消息标题
+                      </label>
+                      <div class="layui-input-inline">
+                          <input type="text" id="msg_title" name="msg_title" required="" lay-verify="required"
+                          autocomplete="off" class="layui-input">
+                      </div>
+                     
+                  </div>
+                  <div class="layui-form-item">
+                      <label class="layui-form-label">
+                          <span class="x-red">*</span>消息内容
+                      </label>
+                      <div class="layui-input-block">
+                          <input type="text" id="msg_content" name="msg_content" required="" lay-verify="required"
                           autocomplete="off" class="layui-input">
                       </div>
                   </div>
+                 
                   <div class="layui-form-item">
-                      <label for="pname" class="layui-form-label">
-                          <span class="x-red">*</span>上级菜单
-                      </label>
-                      <div class="layui-input-inline">
-                           <select name="parent_id" >
-                              <option value="0">一级菜单</option>
-                              {foreach $data_list as $val}
-                                    <option value="{$val['id']}" {if $val['id'] == $parent_id}selected{/if}>{$val['pname']}</option>
-                                    {foreach $val['child'] as $val2}
-                                            <option value="{$val2['id']}" {if $val2['id'] == $parent_id}selected{/if}>&nbsp;&nbsp;&nbsp;├ {$val2['pname']}</option>
-                                    {/foreach}
-                              {/foreach}
-                           </select>
-                      </div>
-                  </div>
-
-                  <div class="layui-form-item">
-                      <label for="admin_truename" class="layui-form-label">
-                          菜单图标
-                      </label>
-                      <div class="layui-input-inline">
-                          <input type="text" id="picon" name="picon" autocomplete="off" class="layui-input">
-                      </div>
-                      <div class="layui-form-mid layui-word-aux">
-                        仅一级菜单需输入，<a href="/admin/admin/showIcon" target="_blank">点击查看图标</a>
-                      </div>
-                  </div>
-
-                   <div class="layui-form-item">
-                      <label for="admin_truename" class="layui-form-label">
-                          Controller
-                      </label>
-                      <div class="layui-input-inline">
-                          <input type="text" id="pcontroller" name="pcontroller" autocomplete="off" class="layui-input">
-                      </div>
-                      <div class="layui-form-mid layui-word-aux">
-                        一级菜单无需输入该项
-                      </div>
-                  </div>
-                  <div class="layui-form-item">
-                      <label for="admin_truename" class="layui-form-label">
-                          Action
-                      </label>
-                      <div class="layui-input-inline">
-                          <input type="text" id="paction" name="paction"  autocomplete="off" class="layui-input">
-                      </div>
-                      <div class="layui-form-mid layui-word-aux">
-                        一级菜单无需输入该项
-                      </div>
-                  </div>
-
-                  <div class="layui-form-item">
-                      <label for="admin_truename" class="layui-form-label">
-                          排序
-                      </label>
-                      <div class="layui-input-inline">
-                          <input type="text" id="porder" name="porder" value = "0" autocomplete="off" class="layui-input">
-                      </div>
-                      <div class="layui-form-mid layui-word-aux">
-                          排序值越大越靠前
-                      </div>
-                  </div>
-
-                  <div class="layui-form-item">
-                      <label for="admin_dept" class="layui-form-label">
-                         菜单状态
+                      <label class="layui-form-label">
+                         阅读状态
                       </label>
                      <div class="layui-input-block">
-                        <input type="radio" name="pstatus" value="1" lay-skin="primary" checked="" title="启用" >
-                        <input type="radio" name="pstatus" value="2"  lay-skin="primary" title="停用">
+                        <input type="radio" name="is_read" value="1" lay-skin="primary" checked="" title="未读" >
+                        <input type="radio" name="is_read" value="2"  lay-skin="primary" title="已读">
+                      </div>
+                  </div>
+                  <div class="layui-form-item">
+                      <label class="layui-form-label">
+                         删除状态
+                      </label>
+                     <div class="layui-input-block">
+                        <input type="radio" name="is_del" value="1" lay-skin="primary" checked="" title="未删除" >
+                        <input type="radio" name="is_del" value="2"  lay-skin="primary" title="已删除">
                       </div>
                   </div>
 
+                  
+                
+
+                  <div class="layui-form-item">
+                      <label  class="layui-form-label">
+                         添加时间
+                      </label>
+                     <div class="layui-input-inline">
+                         <input type="text" id="add_datetime" name="add_datetime" required="" lay-verify="required"
+                          autocomplete="off" class="layui-input" value="{:date("Y-m-d H:i:s")}">
+                      </div>
+                  </div>
+
+                 
                  
                   <div class="layui-form-item">
                       <label for="L_repass" class="layui-form-label">
@@ -115,26 +106,34 @@
               </form>
             </div>
         </div>
-        <script>layui.use(['form', 'layer'],
+        <script>layui.use(['form', 'layer','laydate'],
             function() {
                 $ = layui.jquery;
                 var form = layui.form,
                 layer = layui.layer;
+                var laydate = layui.laydate;
+
+                //执行一个laydate实例
+                laydate.render({
+                  elem: '#add_datetime', //指定元素
+                  format:'yyyy-MM-dd HH:mm:ss',
+                  type:'datetime'
+                });
 
                 //自定义验证规则
                 form.verify({
-                   
+                    
                 });
 
                 //监听提交
                 form.on('submit(add)',
                 function(data) {
                     
-                    var sub_url = "/admin/admin/powerAddAct";
+                    var sub_url = "/admin/user/userMsgAddAct";
                     $.post(sub_url,data.field,function(redata){
                         if(redata.status == 'SUCCESS')
                         {
-                           layer.alert("添加菜单成功", {
+                           layer.alert("添加成功", {
                                 icon: 6
                             },
                             function() {
